feat: add filter

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             Where
                         </div>
                         <div class="search-each-input">
-                            <input type="text" placeholder="Search destinations">
+                            <input type="text" placeholder="Search destinations" class="destination-input">
                         </div>
                     </div>
                 </div>
@@ -452,7 +452,7 @@
     <!-- </div> -->
 
 
-    <script src="script/render.js"></script>
+    <script type="module" src="script/render.js"></script>
 </body>
 
 
