fix: fix everything

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
                             </path>
                         </svg>
                     </div>
-                    <input type="text" class="search-text-span" placeholder="Start your search ">
+                    <input type="text" class="search-text-span" placeholder="Start your search "
+                    >
                     <!-- <label >
                         <span>
                             Start your search
@@ -223,9 +224,9 @@
                         </video>
 
                     </span>
-                    <!-- <span class="new-wrap-m">
+                    <span class="new-wrap-m">
                                 <span>NEW</span>
-                            </span> -->
+                            </span>
                 </span>
 
                 <span class="service-exp-text-m">Experiences</span>
@@ -244,9 +245,9 @@
                                 type="video/webm">
                         </video>
                     </span>
-                    <!-- <span class="new-wrap-m">
+                    <span class="new-wrap-m">
                                 <span>NEW</span>
-                            </span> -->
+                            </span>
                 </span>
 
                 <span class="service-ser-text-m">Services</span>
